--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,17 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>To Do List</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+    <div class="box" id="heading">
+        <h1> <%= kindOfDay %> </h1>
+    </div>
     
-    <h1> <%= kindOfDay %> </h1>
+    <div class="box">
 
-    <ul>
+                    <% for(var i = 0; i < newListItems.length; i++){ %>
+                        <li><%= newListItems[i] %></li> 
+                   <% } %>
+    </div>
 
-        <% for(var i = 0; i < newListItems.length; i++){ %>
-            <li><%= newListItems[i] %></li> 
-       <% } %>
-    </ul>
+    
 
     <form action="/" method="POST">
         <input type="text" name="newItem">
