--- a/views/list.ejs
+++ b/views/list.ejs
@@ -18,16 +18,21 @@
     <div class="box">
 
         <% for(var i = 0; i < newListItems.length; i++){ %>
-        <li><%= newListItems[i] %></li>
+        <div class="item">
+            <input type="checkbox">
+            <p><%= newListItems[i] %></p>
+        </div>
         <% } %>
+
+        <form class="item" action="/" method="POST">
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+            <button type="submit" name="button">+</button>
+        </form>
     </div>
 
 
 
-    <form action="/" method="POST">
-        <input type="text" name="newItem">
-        <button type="submit" name="button">Add</button>
-    </form>
+    
 </body>
 
 </html>
